--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,9 +14,15 @@
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
+  text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+#root {
+  max-width: 1400px;
+  margin: auto;
 }
 
 a {
@@ -24,6 +30,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
